[project]
name = "godly-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "appimage-builder>=1.1.0",
    "argostranslate>=1.10.0",
    "beautifulsoup4>=4.14.2",
    "cmake-init>=0.41.1",
    "docker>=7.1.0",
    "esptool>=5.1.0",
    "fastapi[standard]>=0.122.0",
    "flask>=3.1.2",
    "geckordp>=1.0.3",
    "gitpython>=3.1.45",
    "go-task-bin>=3.45.5",
    "langchain>=1.1.0",
    "langfuse>=3.10.1",
    "litellm>=1.80.5",
    "marked>=0.9.1",
    "mcp[cli]>=1.22.0",
    "mysql-connector-python>=9.5.0",
    "nuitka>=2.8.6",
    "numpy>=2.3.5",
    "ollama>=0.6.1",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "opentimestamps>=0.4.5",
    "pandas>=2.3.3",
    "paramiko>=4.0.0",
    "psycopg2-binary>=2.9.11",
    "pure-python-adb>=0.3.0.dev0",
    "pydantic>=2.12.4",
    "pygithub>=2.8.1",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "sphinx>=8.2.3",
    "ufbt>=0.2.6",
    "virtualbox>=2.1.1",
]
